--- a/spring-petclinic-visits-service/pom.xml
+++ b/spring-petclinic-visits-service/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.springframework.samples.petclinic.visits</groupId>
-	<artifactId>spring-petclinic-visits-service</artifactId>
+	<artifactId>spring-petclinic-visits-service-cloud</artifactId>
 	<packaging>jar</packaging>
 	<description>Spring PetClinic Visits Service</description>
 
@@ -22,7 +22,7 @@
 		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
 		<spring-boot.version>2.3.1.RELEASE</spring-boot.version>
 		<spring-cloud.version>Hoxton.SR6</spring-cloud.version>
-		<wavefront.version>2.0.1-SNAPSHOT</wavefront.version>
+		<wavefront.version>2.0.1</wavefront.version>
 
 		<spring-boot.build-image.imageName>${REPOSITORY_PREFIX}/visits-service</spring-boot.build-image.imageName>
 	</properties>
